--- a/leaderboard.html
+++ b/leaderboard.html
@@ -101,8 +101,31 @@
                             <td><b><font color="red">0.3997</font></b></td>
 
                         </tr>
-                        <tr>
+                                                   <tr>
                             <td>3 </td>
+                            <td>2023/4/26</td>
+                            <td>Weilan</td>
+                            <td>-</td>
+                            <td><font color="black">- </font></td>
+                            <td><font color="black">0.5304</font></td>
+                            <td><font color="black">0.3618</font></td>
+                            <td><font color="black">0.2236</font></td>
+                            <td><b><font color="black">0.3748</font></b></td>
+
+                        </tr>
+                        <td>4 </td>
+                            <td>2023/4/26</td>
+                            <td>nsddd</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.5004</font></td>
+                            <td><font color="black">0.3537</font></td>
+                            <td><font color="black">0.2338</font></td>
+                            <td><b><font color="black">0.3704</font></b></td>
+
+                        </tr>
+                        <tr>
+                            <td>5 </td>
                             <td>2023/4/22</td>
                             <td>辣子鸡丁队</td>
                             <td>-</td>
