Update3 leaderboard.html

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -172,7 +172,7 @@
                                 <td>2023/5/3</td>
                                 <td>nsddd</td>
                                 <td>-</td>
-                                <td><font color="black"> -/font></td>
+                                <td><font color="black"> -</font></td>
                                 <td><font color="black">0.4817</font></td>
                                 <td><font color="black">0.6504</font></td>
                                 <td><font color="black">0.7358</font></td>
@@ -235,7 +235,7 @@
                             <td>2023/5/3</td>
                             <td>nsddd</td>
                             <td>-</td>
-                            <td><font color="black"> -/font></td>
+                            <td><font color="black"> -</font></td>
                             <td><font color="black">0.1485</font></td>
                             <td><font color="black">0.2675</font></td>
                             <td><font color="black">0.3690</font></td>
