Update4 leaderboard.html

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -89,7 +89,7 @@
                             <td><font color="black">0.3028</font></td>
                             <td><b><font color="black">0.4446</font></b></td>
 
-                        </tr>
+
                        <tr>
                             <td>2 </td>
                             <td>2023/4/21</td>
@@ -102,8 +102,21 @@
                             <td><b><font color="black">0.4200</font></b></td>
 
                         </tr>
-                       <tr>
+                                                    </tr>
+                                                    <tr>
                             <td>3 </td>
+                            <td>2023/5/3</td>
+                            <td>Ditto</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.5836</font></td>
+                            <td><font color="black">0.4106</font></td>
+                            <td><font color="black">0.2724</font></td>
+                            <td><b><font color="black">0.4160</font></b></td>
+
+                        </tr>
+                       <tr>
+                            <td>4 </td>
                             <td>2023/4/10</td>
                             <td>-</td>
                             <td>-</td>
@@ -115,7 +128,7 @@
 
                         </tr>
                                                      <tr>
-                            <td>4 </td>
+                            <td>5 </td>
                             <td>2023/5/3</td>
                             <td>Weilan</td>
                             <td>-</td>
@@ -127,7 +140,7 @@
 
                         </tr>                          
                             <tr>
-                            <td>5 </td>
+                            <td>6 </td>
                             <td>2023/4/26</td>
                             <td>Weilan</td>
                             <td>-</td>
@@ -140,7 +153,7 @@
                         </tr>
                          
                         <tr>
-                            <td>6 </td>
+                            <td>7 </td>
                             <td>2023/4/22</td>
                             <td>辣子鸡丁队</td>
                             <td>-</td>
