--- a/leaderboard.html
+++ b/leaderboard.html
@@ -77,8 +77,7 @@
                         <td>R@1,IoU=0.7</td>
                                   <td><b>mIoU(R@1)</b></td>
                         </tr>
-                                                                                                                                                          <tr>
-                                                                                <tr>
+                                                    <tr>
                             <td>1 </td>
                             <td>2023/5/7</td>
                             <td>Mote</td>
@@ -88,10 +87,34 @@
                             <td><font color="black">0.4593</font></td>
                             <td><font color="black">0.3028</font></td>
                             <td><b><font color="black">0.4446</font></b></td>
-                                                </tr>
+                        </tr>
+                                                                                      <tr>
+                            <td>2 </td>
+                            <td>2023/5/7</td>
+                            <td>nsddd</td>
+                            <td>-</td>
+                            <td><font color="black">- </font></td>
+                            <td><font color="black">0.5962</font></td>
+                            <td><font color="black">0.4482</font></td>
+                            <td><font color="black">0.2748</font></td>
+                            <td><b><font color="black">0.4374</font></b></td>
+                        </tr>
+
 
                                                <tr>
-                            <td>2 </td>
+                            <td>3 </td>
+                            <td>2023/4/21</td>
+                            <td>Weilan</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.5899</font></td>
+                            <td><font color="black">0.4249</font></td>
+                            <td><font color="black">0.2770</font></td>
+                            <td><b><font color="black">0.4264</font></b></td>
+                        </tr>
+
+                                               <tr>
+                            <td>4 </td>
                             <td>2023/4/21</td>
                             <td>啊对对队</td>
                             <td>-</td>
@@ -100,9 +123,10 @@
                             <td><font color="black">0.4016</font></td>
                             <td><font color="black">0.2579</font></td>
                             <td><b><font color="black">0.4200</font></b></td>
+                        </tr>
 
                         <tr>
-                            <td>3</td>
+                            <td>5</td>
                             <td>2023/5/7</td>
                             <td>Eval</td>
                             <td>-</td>
@@ -113,7 +137,7 @@
                             <td><b><font color="black">0.4173</font></b></td>
 
                            <tr>
-                            <td>4 </td>
+                            <td>6 </td>
                             <td>2023/5/3</td>
                             <td>Ditto</td>
                             <td>-</td>
@@ -126,7 +150,7 @@
 
 
                         <tr>
-                            <td>5 </td>
+                            <td>7 </td>
                             <td>2023/5/7</td>
                             <td>菜鸟选手</td>
                             <td>-</td>
@@ -141,29 +165,7 @@
 
                         </tr>
 
-                                                                               <tr>
-                            <td>6</td>
-                            <td>2023/5/3</td>
-                            <td>Weilan</td>
-                            <td>-</td>
-                            <td><font color="black">- </font></td>
-                            <td><font color="black">0.5528</font></td>
-                            <td><font color="black">0.4024</font></td>
-                            <td><font color="black">0.2561</font></td>
-                            <td><b><font color="black">0.4047</font></b></td>
-                        </tr>
 
-                                                                                     <tr>
-                            <td>7 </td>
-                            <td>2023/5/7</td>
-                            <td>nsddd</td>
-                            <td>-</td>
-                            <td><font color="black">- </font></td>
-                            <td><font color="black">0.5467</font></td>
-                            <td><font color="black">0.3861</font></td>
-                            <td><font color="black">0.2459</font></td>
-                            <td><b><font color="black">0.4036</font></b></td>
-                        </tr>
                        <tr>
 
                             <td>8 </td>
@@ -180,7 +182,7 @@
 
 
                         <tr>
-                            <td>9 </td>
+                            <td>9</td>
                             <td>2023/4/22</td>
                             <td>辣子鸡丁队</td>
                             <td>-</td>
@@ -207,7 +209,6 @@
                                 <td>MRR</td>
                             <td><b>Overall</b></td>
                             </tr>
-                                                                                                                                       <tr>
                                                                                                                                 <tr>
                                                                                 <tr>
                                 <td>1</td>
@@ -260,8 +261,21 @@
                                 <td><font color="black">0.4674</font></td>
                                 <td><b><font color="black">2.2621</font></b></td>
                             </tr>
-                                                                                <tr>
+                        <tr>
                                 <td>5</td>
+                                <td>2023/5/7</td>
+                                <td>DSG1</td>
+                                <td>-</td>
+                                <td><font color="black"> -</font></td>
+                                <td><font color="black">0.2947</font></td>
+                                <td><font color="black">0.5508</font></td>
+                                <td><font color="black">0.7276</font></td>
+                                <td><font color="black">0.3846</font></td>
+                                <td><b><font color="black">1.9577</font></b></td>
+                            </tr>
+
+                                                                                <tr>
+                                <td>6</td>
                                 <td>2023/5/7</td>
                                 <td>Eval</td>
                                 <td>-</td>
@@ -274,7 +288,7 @@
                             </tr>
 
                             <tr>
-                                <td>6</td>
+                                <td>7</td>
                                 <td>2023/4/10</td>
                                 <td>-</td>
                                 <td>-</td>
@@ -286,7 +300,7 @@
                                 <td><b><font color="red">2.0144</font></b></td>
                             </tr>
                             <tr>
-                                <td>7</td>
+                                <td>8</td>
                                 <td>2023/4/21</td>
                                 <td>啊对对队</td>
                                 <td>-</td>
@@ -369,8 +383,21 @@
                             <td><font color="red">0.4409</font></td>
                             <td><b><font color="red">0.3291</font></b></td>
                          </tr>
-                                                 <tr>
+                        <tr>
                             <td>6</td>
+                            <td>2023/5/7</td>
+                            <td>DSG1</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.1559</font></td>
+                            <td><font color="black">0.3272</font></td>
+                            <td><font color="black">0.4526</font></td>
+                            <td><b><font color="black">0.3119</font></b></td>
+                         </tr>
+
+
+                                                 <tr>
+                            <td>7</td>
                             <td>2023/5/7</td>
                             <td>Eval</td>
                             <td>-</td>
@@ -383,7 +410,7 @@
 
 
                                                     <tr>
-                            <td>7</td>
+                            <td>8</td>
                             <td>2023/4/22</td>
                             <td>啊对对队</td>
                             <td>-</td>
