--- a/leaderboard.html
+++ b/leaderboard.html
@@ -399,8 +399,20 @@
                             <td><font color="black">0.5244</font></td>
                             <td><b><font color="black">0.3673</font></b></td>
                          </tr>
-                        <tr>
+                                                <tr>
                             <td>5</td>
+                            <td>2023/5/14</td>
+                            <td>HLT-base</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.2150</font></td>
+                            <td><font color="black">0.3693</font></td>
+                            <td><font color="black">0.4936</font></td>
+                            <td><b><font color="black">0.3593</font></b></td>
+                         </tr>
+
+                        <tr>
+                            <td>6</td>
                             <td>2023/4/10</td>
                             <td>-</td>
                             <td>-</td>
@@ -411,7 +423,7 @@
                             <td><b><font color="red">0.3291</font></b></td>
                          </tr>
                         <tr>
-                            <td>6</td>
+                            <td>7</td>
                             <td>2023/5/10</td>
                             <td>DSG1</td>
                             <td>-</td>
@@ -424,7 +436,7 @@
 
 
                                                  <tr>
-                            <td>7</td>
+                            <td>8</td>
                             <td>2023/5/7</td>
                             <td>Eval</td>
                             <td>-</td>
@@ -437,7 +449,7 @@
 
 
                                                     <tr>
-                            <td>8</td>
+                            <td>9</td>
                             <td>2023/4/22</td>
                             <td>啊对对队</td>
                             <td>-</td>
