--- a/leaderboard.html
+++ b/leaderboard.html
@@ -181,7 +181,7 @@
                         <tr>
                             <td>9</td>
                             <td>2023/5/19</td>
-                            <td>Eval</td>
+                            <td>WAN</td>
                             <td>-</td>
                             <td><font color="black"> -</font></td>
                             <td><font color="black">0.5750</font></td>
