--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <li class="nav-item"><a class="nav-link" href="#award">Award</a></li>
                 <li class="nav-item"><a class="nav-link" href="#organizers">Organizers</a></li>
                 <li class="nav-item"><a class="nav-link" href="#reference">Reference</a></li>
-                <li class="nav-item"><a class="nav-link" href="./leaderboard.html">Leaderboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="./leaderboard.html">LeaderboardA</a></li>
+                <li class="nav-item"><a class="nav-link" href="./leaderboardb.html">LeaderboardB</a></li>
 <!--                TODO leaderboard-->
             </ul>
             <ul class="navbar-nav ml-auto order-1">
@@ -101,7 +102,7 @@
                     <!--
                     <b>Vivid talking head video generation</b> conditioned on the identity and audio signals of the speaker; <b>Responsive listening head video generation</b> conditioned on the identity of the listener and with responding to the speaker’s behaviors in real-time. The main difficulties lie in the large amount of products labels, and fine-grained details of similar products. Top-1 and Top-5 accuracy is measured to rank each submission.
                     </p>
-                    -->    
+                    -->
                     <p class="card-text">
                         The team constitution (members of a team) cannot be changed after the evaluation period has begun. Individuals and teams with top submissions will present their work at the workshop. We also encourage every team to upload a paper (See <a href="http://tcci.ccf.org.cn/conference/2023/cfpt.php">Paper Submission Guidelines</a>) that briefly describes their system. If there are any questions, please let us know by raising an issue.
                                             </p>
