--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <!--                        <strong>Train+Valid+Test Set:</strong> <a href="https://1drv.ms/u/s!Ag220j2nXkVswCSUXjTP_cA3Y0y2?e=9b3VXA" target="_blank">OneDrive</a><br/>-->
                         <strong>Train & Validation Set:</strong> <a href="https://pan.baidu.com/s/1eN_mo3iHyyHVH_8dciElqA?pwd=9871">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1QbY8DEaVLkY2w6vOCWAs4ZQFHgJ3q8ui?usp=sharing">GoogleDrive</a><br/>
                         <strong>Test Set A:</strong> <a href="https://pan.baidu.com/s/1XxoQ-KwUy9qf3Z0RfaPTaw?pwd=9874">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1Fdll0Qn8Ol65Z91u51NOEpBoxAQlrXN4?usp=sharing">GoogleDrive</a> <br/>
-                    <strong>Test Set B:</strong> <a>To be published around May 21th</a><br/>
+                    <strong>Test Set B:</strong> <a href="https://pan.baidu.com/s/1Z7wV76Yd2SDlVOUBkIafoQ?pwd=9871">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1QkddCTyeXYwO-gTtlC5r0e4M47Bdsclo?usp=sharing">GoogleDrive</a><br/>
 
                     <h5>Statistics</h5>
                     <center>
@@ -242,11 +242,11 @@
                         </tr>
                         <tr>
                             <td>Test B (Released around May 18th)</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
+                            <td>200</td>
+                            <td>511</td>
+                            <td>2234</td>
+                            <td>17.48</td>
+                            <td>310.94</td>
                         </tr>
                         </tbody>
             </table>
