--- a/leaderboardb.html
+++ b/leaderboardb.html
@@ -76,11 +76,31 @@
                         <td>R@1,IoU=0.5</td>
                         <td>R@1,IoU=0.7</td>
                                   <td><b>mIoU(R@1)</b></td>
-
-
+                                               <tr>
+                            <td>1 </td>
+                            <td>2023/5/23</td>
+                            <td>nsddd</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.5499</font></td>
+                            <td><font color="black">0.3855</font></td>
+                            <td><font color="black">0.2213</font></td>
+                            <td><b><font color="black">0.3860</font></b></td>
+                        </tr>
+                                               <tr>
+                            <td>2 </td>
+                            <td>2023/5/23</td>
+                            <td>辣子鸡丁队</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.4932</font></td>
+                            <td><font color="black">0.3483</font></td>
+                            <td><font color="black">0.2153</font></td>
+                            <td><b><font color="black">0.3618</font></b></td>
+                        </tr>
                        <tr>
 
-                            <td>1 </td>
+                            <td>3 </td>
                             <td>2023/5/21</td>
                             <td>-</td>
                             <td>-</td>
@@ -119,7 +139,7 @@
                                 <td><font color="red">0.4403</font></td>
                                 <td><font color="red">0.5427</font></td>
                                 <td><font color="red">0.3641</font></td>
-                                <td><b><font color="red">1.6721</font></b></td>
+                                <td><b><font color="red">1.672</font></b></td>
                             </tr>
 
                         </tbody>
