--- a/leaderboardb.html
+++ b/leaderboardb.html
@@ -87,8 +87,21 @@
                             <td><font color="black">0.2213</font></td>
                             <td><b><font color="black">0.3860</font></b></td>
                         </tr>
-                                               <tr>
+                                                                             <tr>
                             <td>2 </td>
+                            <td>2023/5/24</td>
+                            <td>Mote</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.51.66</font></td>
+                            <td><font color="black">0.36.20</font></td>
+                            <td><font color="black">0.2192</font></td>
+                            <td><b><font color="black">0.3768</font></b></td>
+                        </tr>
+
+
+                                               <tr>
+                            <td>3 </td>
                             <td>2023/5/23</td>
                             <td>辣子鸡丁队</td>
                             <td>-</td>
@@ -98,9 +111,21 @@
                             <td><font color="black">0.2153</font></td>
                             <td><b><font color="black">0.3618</font></b></td>
                         </tr>
+                                                                          <tr>
+                            <td>4 </td>
+                            <td>2023/5/24</td>
+                            <td>Ditto</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.49.12</font></td>
+                            <td><font color="black">0.3542</font></td>
+                            <td><font color="black">0.1879</font></td>
+                            <td><b><font color="black">0.3596</font></b></td>
+                        </tr>
+
                        <tr>
 
-                            <td>3 </td>
+                            <td>6 </td>
                             <td>2023/5/21</td>
                             <td>-</td>
                             <td>-</td>
@@ -129,8 +154,21 @@
                                 <td>MRR</td>
                             <td><b>Overall</b></td>
                             </tr>
+                           <tr>
+                            <td>1 </td>
+                            <td>2023/5/24</td>
+                            <td>nsddd</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.5225</font></td>
+                            <td><font color="black">0.6947</font></td>
+                            <td><font color="black">0.8023</font></td>
+                            <td><font color="black">0.5799</font></td>
+                            <td><b><font color="black">0.2599</font></b></td>
+                            </tr>
+
                             <tr>
-                                <td>1</td>
+                                <td>2</td>
                                 <td>2023/5/21</td>
                                 <td>-</td>
                                 <td>-</td>
@@ -159,9 +197,20 @@
                             <td><b>Average</b></td>
                         </tr>
 
+                                                 <tr>
+                            <td>1</td>
+                            <td>2023/5/24</td>
+                            <td>nsddd</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.2346</font></td>
+                            <td><font color="black">0.4368</font></td>
+                            <td><font color="black">0.5631</font></td>
+                            <td><b><font color="black">0.4115</font></b></td>
+                         </tr>
 
                         <tr>
-                            <td>1</td>
+                            <td>2</td>
                             <td>2023/5/21</td>
                             <td>-</td>
                             <td>-</td>
