--- a/leaderboardb.html
+++ b/leaderboardb.html
@@ -76,8 +76,10 @@
                         <td>R@1,IoU=0.5</td>
                         <td>R@1,IoU=0.7</td>
                                   <td><b>mIoU(R@1)</b></td>
+                              
+                              
                                                <tr>
-                            <td>1 </td>
+                            <td>2 </td>
                             <td>2023/5/23</td>
                             <td>nsddd</td>
                             <td>-</td>
@@ -93,8 +95,8 @@
                             <td>Mote</td>
                             <td>-</td>
                             <td><font color="black"> -</font></td>
-                            <td><font color="black">0.51.66</font></td>
-                            <td><font color="black">0.36.20</font></td>
+                            <td><font color="black">0.5166</font></td>
+                            <td><font color="black">0.3620</font></td>
                             <td><font color="black">0.2192</font></td>
                             <td><b><font color="black">0.3768</font></b></td>
                         </tr>
@@ -117,7 +119,7 @@
                             <td>Ditto</td>
                             <td>-</td>
                             <td><font color="black"> -</font></td>
-                            <td><font color="black">0.49.12</font></td>
+                            <td><font color="black">0.4912</font></td>
                             <td><font color="black">0.3542</font></td>
                             <td><font color="black">0.1879</font></td>
                             <td><b><font color="black">0.3596</font></b></td>
@@ -136,7 +138,20 @@
                             <td><b><font color="red">0.3592</font></b></td>
 
                         </tr>
+                       <tr>
 
+
+                            <td>7 </td>
+                            <td>2023/5/25</td>
+                            <td>Welian</td>
+                            <td>-</td>
+                            <td><font color="black"> -</font></td>
+                            <td><font color="black">0.4834</font></td>
+                            <td><font color="black">0.3542</font></td>
+                            <td><font color="black">0.2192</font></td>
+                            <td><b><font color="black">0.3537</font></b></td>
+
+                        </tr>
                         </tbody>
                     </table>
                                         <center><h6><br>Video Corpus Retrieval Track</h6></center>
