--- a/leaderboardb.html
+++ b/leaderboardb.html
@@ -262,8 +262,8 @@
                          </tr>
                                                  <tr>
                             <td>2</td>
-                            <td>2023/5/24</td>
-                            <td>nsddd</td>
+                            <td>2023/5/26</td>
+                            <td>HLT-base</td>
                             <td>-</td>
                             <td><font color="black"> -</font></td>
                             <td><font color="black">0.2090</font></td>
